--- a/core/arp/templates/category/list.html
+++ b/core/arp/templates/category/list.html
@@ -1,7 +1,22 @@
-{% extends 'body.html' %}
+{% extends 'list.html' %}
 
-{% block content %}
+{% block columns %}
+<tr>
+    <th scope="col">#</th>
+    <th scope="col">Name</th>
+    <th scope="col">Options</th>
+</tr>
+{% endblock %}
 
-<p>para listar categorias</p>
-
+{% block rows %}
+                {% for c in categories %}
+                <tr>
+                    <td>{{ c.id }}</td>
+                    <td>{{ c.name }}</td>
+                    <td>
+                        <button type="button" class="btn btn-info btn-xs"><i class="fas fa-edit"></i></button>
+                        <button type="button" class="btn btn-danger btn-xs"><i class="fas fa-trash-alt"></i></button>
+                    </td>
+                </tr>
+                {% endfor %}
 {% endblock %}
