--- a/templates/body.html
+++ b/templates/body.html
@@ -1,17 +1,34 @@
-{% extends 'home.html' %} 
-
-{% block body %}
+{% extends 'home.html' %} {% block body %}
 
 <body class="hold-transition layout-top-nav">
     <div class="wrapper">
         {% include 'header.html' %}
 
         <div class="content-wrapper">
-            {% block content %} {% endblock %}
+            <div class="content-header">
+                <div class="container">
+                    <div class="row mb-2">
+                        <div class="col-sm-6">
+                            <h1 class="m-0 text-dark">Bienvenido</h1>
+                        </div>
+                        <div class="col-sm-6">
+                            <ol class="breadcrumb float-sm-right">
+                                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                                <li class="breadcrumb-item"><a href="#">Layout</a></li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content">
+                <div class="container">
+                    {% block content %} {% endblock %}
+                </div>
+            </div>
         </div>
 
         <aside class="control-sidebar control-sidebar-dark">
-
             <div class="p-3">
                 <h5>Title</h5>
                 <p>Sidebar content</p>
@@ -21,5 +38,4 @@
         {% include 'footer.html' %}
     </div>
 </body>
-
 {% endblock %}
