--- a/core/arp/templates/category/list.html
+++ b/core/arp/templates/category/list.html
@@ -2,9 +2,9 @@
 
 {% block columns %}
 <tr>
-    <th scope="col" style="width: 10%">#</th>
-    <th scope="col" style="width: 70%">Name</th>
-    <th scope="col" style="width: 20%">Options</th>
+    <th scope="col">#</th>
+    <th scope="col">Name</th>
+    <th scope="col">Options</th>
 </tr>
 {% endblock %} 
 
