--- a/core/arp/templates/category/create.html
+++ b/core/arp/templates/category/create.html
@@ -7,18 +7,37 @@
             </h3>
         </div>
         <div class="card-body">
-       		{% csrf_token %}
+            {% csrf_token %} 
+
 			{% for field in form.visible_fields %}
-				<div class="form-group">
-					<label>{{ field.label }}:</label>
-					{{ field }}
-				</div>
-			{% endfor %}
-		</div>
+            <div class="form-group">
+                <label>{{ field.label }}:</label> {{ field }}
+            </div>
+            {% endfor %}
+
+        </div>
 
         <div class="card-footer">
             <button type="submit" class="btn btn-primary btn-flat btnTest"><i class="fas fa-save"></i>Guardar registro</button>
         </div>
     </div>
 </form>
+<script>
+	{% if form.errors %}
+	let errors = '';
+		{% for field in form %} 
+			{% for error in field.errors %}
+            	errors+= '{{ error }}\n';
+        	{% endfor %} 
+		{% endfor %}
+
+	Swal.fire({
+			position: 'top-end',
+			title: 'Error!',
+			text: errors,
+			icon: 'error',
+		});
+	{% endif %}
+
+</script>
 {% endblock %}
