--- a/core/arp/templates/category/create.html
+++ b/core/arp/templates/category/create.html
@@ -1,43 +1,1 @@
-{% extends 'body.html' %} {% block content %}
-<form method="post" action=".">
-    <div class="card card-default">
-        <div class="card-header">
-            <h3 class="card-title">
-                <i class="fas fa-plus"></i> {{ title }}
-            </h3>
-        </div>
-        <div class="card-body">
-            {% csrf_token %} 
-
-			{% for field in form.visible_fields %}
-            <div class="form-group">
-                <label>{{ field.label }}:</label> {{ field }}
-            </div>
-            {% endfor %}
-
-        </div>
-
-        <div class="card-footer">
-            <button type="submit" class="btn btn-primary btn-flat btnTest"><i class="fas fa-save"></i>Guardar registro</button>
-        </div>
-    </div>
-</form>
-<script>
-	{% if form.errors %}
-	let errors = '';
-		{% for field in form %} 
-			{% for error in field.errors %}
-            	errors+= '{{ error }}\n';
-        	{% endfor %} 
-		{% endfor %}
-
-	Swal.fire({
-			position: 'top-end',
-			title: 'Error!',
-			text: errors,
-			icon: 'error',
-		});
-	{% endif %}
-
-</script>
-{% endblock %}
+{% extends 'form.html' %}
