--- a/templates/home.html
+++ b/templates/home.html
@@ -27,6 +27,7 @@
     <!-- AdminLTE App -->
     <script src="{% static 'lib/adminlte-3.0.4/js/adminlte.min.js' %}"></script>
 	<script src="{% static 'lib/sweetalert2-9.10.0/sweetalert2.all.min.js' %}"></script>
+	<script src="{% static 'js/functions.js' %}"></script>
 	<!--Block head -->
 	{% block head %}
 
