[feat]: method update

--- a/core/arp/templates/category/list.html
+++ b/core/arp/templates/category/list.html
@@ -15,7 +15,9 @@
     <td>{{ c.id }}</td>
     <td>{{ c.name }}</td>
     <td>
-        <button type="button" class="btn btn-info btn-xs"><i class="fas fa-edit"></i></button>
+		<a href="{% url 'arp:category_update' c.id %}" class="btn btn-info btn-xs">
+			<i class="fas fa-edit"></i>
+		</a>
         <button type="button" class="btn btn-danger btn-xs"><i class="fas fa-trash-alt"></i></button>
     </td>
 </tr>
