--- a/core/arp/templates/category/list.html
+++ b/core/arp/templates/category/list.html
@@ -18,7 +18,9 @@
 		<a href="{% url 'arp:category_update' c.id %}" class="btn btn-info btn-xs">
 			<i class="fas fa-edit"></i>
 		</a>
-        <button type="button" class="btn btn-danger btn-xs"><i class="fas fa-trash-alt"></i></button>
+		<a href="{% url 'arp:category_delete' c.id %}" class="btn btn-danger btn-xs">
+			<i class="fas fa-trash-alt"></i>
+		</a>
     </td>
 </tr>
 {% endfor %}
