--- a/templates/form.html
+++ b/templates/form.html
@@ -5,7 +5,13 @@
     <div class="card card-default">
         <div class="card-header">
             <h3 class="card-title">
-                <i class="fas fa-plus"></i> {{ title }}
+				{% if action == 'add' %}
+                	<i class="fas fa-plus"></i> {{ title }}
+				{% endif %}
+
+				{% if action == 'edit'%}
+					<i class="fas fa-edit"></i>{{ title }}
+				{% endif %}
             </h3>
         </div>
         <div class="card-body">
