--- a/core/arp/templates/category/delete.html
+++ b/core/arp/templates/category/delete.html
@@ -1,40 +1,1 @@
-{% extends 'body.html' %}
-
-{% block content %}
-<form method="post" action=".">
-    <div class="card card-default">
-        <div class="card-header">
-            <h3 class="card-title">
-                <i class="fas fa-trash"></i> {{ title }}
-            </h3>
-        </div>
-        <div class="card-body">
-            {% csrf_token %} 
-			<input type="hidden" name="action" value="{{ action }}">
-
-			{% for field in form.visible_fields %}
-            <div class="form-group">
-                <label>{{ field.label }}:</label> {{ field }}
-            </div>
-            {% endfor %}
-
-			<div class="alert alert-danger alert-dismissible">
-				<h5><i class="icon fas fa-ban"></i>¡Notificación!</h5>
-				¿Estas seguro de eliminar el registro No. {{ object.id }}?
-			</div>
-        </div>
-
-        <div class="card-footer">
-            <button type="submit" class="btn btn-primary btn-flat">
-				<i class="fas fa-save"></i>
-				Si, aceptar
-			</button>
-			<a href="{{ list_url }}" class="btn btn-danger btn-flat">
-				<i class="fas fa-times"></i>
-				Cancelar
-			</a>
-        </div>
-    </div>
-</form>
-
-{% endblock %}
+{% extends 'delete.html' %}
