--- a/core/arp/templates/category/list.html
+++ b/core/arp/templates/category/list.html
@@ -1,28 +1,25 @@
 {% extends 'list.html' %} 
+{% load static %}
+
+{% block head_list %}
+	
+<script src="{% static 'category/js/list.js' %}"></script>
+
+{% endblock %}
 
 {% block columns %}
 <tr>
-    <th scope="col">#</th>
-    <th scope="col">Name</th>
-    <th scope="col">Options</th>
+    <th scope="col" style="width: 10%">#</th>
+    <th scope="col" style="width: 20%" >Name</th>
+    <th scope="col" style="width: 20%">Options</th>
+    <th scope="col" style="width: 50%">Description</th>
 </tr>
 {% endblock %} 
 
 {% block rows %}
 
-{% for c in object_list %}
-<tr>
-    <td>{{ c.id }}</td>
-    <td>{{ c.name }}</td>
-    <td>
-		<a href="{% url 'arp:category_update' c.id %}" class="btn btn-info btn-xs">
-			<i class="fas fa-edit"></i>
-		</a>
-		<a href="{% url 'arp:category_delete' c.id %}" class="btn btn-danger btn-xs">
-			<i class="fas fa-trash-alt"></i>
-		</a>
-    </td>
-</tr>
-{% endfor %}
+{% endblock %}
+
+{% block javascript %}
 
 {% endblock %}
