--- a/templates/delete.html
+++ b/templates/delete.html
@@ -1,16 +1,11 @@
-{% extends 'layout.html' %} 
+{% extends 'layout.html' %}
 
 {% block content %}
 <form method="post" action=".">
     <div class="card card-default">
         <div class="card-header">
             <h3 class="card-title">
-				{% if action == 'add' %}
-                	<i class="fas fa-plus"></i> {{ title }}
-
-				{% else %}
-					<i class="fas fa-edit"></i>{{ title }}
-				{% endif %}
+                <i class="fas fa-trash"></i> {{ title }}
             </h3>
         </div>
         <div class="card-body">
@@ -22,14 +17,27 @@
                 <label>{{ field.label }}:</label> {{ field }}
             </div>
             {% endfor %}
+
+			<div class="alert alert-danger alert-dismissible">
+				<h5><i class="icon fas fa-ban"></i>¡Notificación!</h5>
+				¿Estas seguro de eliminar el registro No. {{ object.id }}?
+			</div>
         </div>
 
         <div class="card-footer">
-            <button type="submit" class="btn btn-primary btn-flat btnTest"><i class="fas fa-save"></i>Guardar registro</button>
+            <button type="submit" class="btn btn-primary btn-flat">
+				<i class="fas fa-save"></i>
+				Si, aceptar
+			</button>
+			<a href="{{ list_url }}" class="btn btn-danger btn-flat">
+				<i class="fas fa-times"></i>
+				Cancelar
+			</a>
         </div>
     </div>
 </form>
-<script>
+
+<script>	
 	const Toast = Swal.mixin({
 		toast: true,
 		position: 'top-end',
@@ -47,8 +55,11 @@
 			data: parameters,
 			dataType: 'json'
 		}).done(function(data){
-			!data.hasOwnProperty('name') ? message_success('¡Guardado!') : message_error(data.name)
+			//!data.hasOwnProperty('name') ? message_success('¡Eliminado!') : message_error(data.name)
+			location.href = '{{ list_url }}'
+
 		});
 	});
 </script>
+
 {% endblock %}
