--- a/templates/hzt/body.html
+++ b/templates/hzt/body.html
@@ -1,8 +1,9 @@
-{% extends 'home.html' %}
+{% extends 'home.html' %} 
+
 {% block body %}
 <body class="hold-transition layout-top-nav">
     <div class="wrapper">
-        {% include 'header.html' %}
+        {% include 'hzt/header.html' %}
 
         <div class="content-wrapper">
             <div class="content-header">
@@ -14,7 +15,7 @@
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
-								<li class="breadcrumb-item"><a href="{{ list_url }}">{{ entity }}</a></li>
+                                <li class="breadcrumb-item"><a href="{{ list_url }}">{{ entity }}</a></li>
                             </ol>
                         </div>
                     </div>
@@ -28,22 +29,10 @@
             </div>
         </div>
 
-        <aside class="control-sidebar control-sidebar-dark">
-            <div class="p-3">
-                <h5>Title</h5>
-                <p>Sidebar content</p>
-            </div>
-        </aside>
-
         {% include 'footer.html' %}
     </div>
 
-	<!--Block javascript-->
-	{% block javascript %}
-
-	{% endblock %}
+    <!--Block javascript-->
+    {% block javascript %} {% endblock %}
 </body>
 {% endblock %}
-
-
-
