--- a/templates/hzt/header.html
+++ b/templates/hzt/header.html
@@ -1,15 +1,14 @@
 {% load static %}
 <!-- Navbar -->
-<nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
+<nav class="main-header navbar navbar-expand navbar-dark navbar-primary">
     <div class="container">
         <i class="fas fa-cart-plus"></i>
         <span class="brand-text font-weight-light">Hades</span>
-        </a>
 
         <button class="navbar-toggler order-1" type="button" data-toggle="collapse" data-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+     		 <span class="navbar-toggler-icon"></span>
+  		</button>
 
         <div class="collapse navbar-collapse order-3" id="navbarCollapse">
             <!-- Left navbar links -->
@@ -22,7 +21,7 @@
                         class="nav-link dropdown-toggle"><i class="fas fa-folder-open"></i> Mantenimientos </a>
                     <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow">
                         <li>
-                            <a href="#" class="dropdown-item"><i class="fas fa-truck-loading"></i> Categorias</a>
+							<a href="{% url 'arp:category_list' %}" class="dropdown-item"><i class="fas fa-truck-loading"></i> Categorias</a>
                         </li>
                         <li>
                             <a href="#" class="dropdown-item"><i class="fas fa-boxes"></i>Productos</a>
@@ -34,7 +33,7 @@
                             <a href="#" class="dropdown-item"><i class="fas fa-shopping-cart"></i>Ventas</a>
                         </li>
                 </li>
-                </ul>
+            </ul>
 
         </div>
 
@@ -63,11 +62,10 @@
             <i class="fas fa-file mr-2"></i> 3 new reports
             <span class="float-right text-muted text-sm">2 days</span>
           </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a
-          >
-        </div>
-      </li> 
-	</ul>
-  </div>
+               <div class="dropdown-divider"></div>
+                 <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
+        		</div>
+      		</li> 
+		</ul>
+  	</div>
 </nav>
