--- a/templates/list.html
+++ b/templates/list.html
@@ -1,13 +1,16 @@
-{% extends 'body.html' %}
+{% extends 'layout.html' %}
 {% load static %}
 {% block head %}
 <link rel="stylesheet" href="{% static 'lib/datatables-1.10.20/css/dataTables.bootstrap4.min.css' %}"/>
 <link rel="stylesheet" href="{% static 'lib/datatables-1.10.20/plugins/responsive-2.2.3/css/responsive.bootstrap4.min.css'%}"/>
-
 <script src="{% static 'lib/datatables-1.10.20/js/jquery.dataTables.js' %}"></script>
 <script src="{% static 'lib/datatables-1.10.20/js/dataTables.bootstrap4.min.js' %}"></script>
 <script src="{% static 'lib/datatables-1.10.20/plugins/responsive-2.2.3/js/dataTables.responsive.min.js' %}"></script>
 <script src="{% static 'lib/datatables-1.10.20/plugins/responsive-2.2.3/js/responsive.bootstrap4.min.js' %}"></script>
+
+	{% block head_list %}
+	
+	{% endblock %}
 
 {% endblock %}
 
@@ -18,7 +21,6 @@
             <i class="fas fa-search"></i> {{ title }}
         </h3>
     </div>
-    <!-- /.card-header -->
     <div class="card-body">
         <table class="table" id="data">
             <thead>
@@ -44,21 +46,21 @@
 
 {% block javascript %}
 	<script>
-		$(function (){
-			$('#data').DataTable({
+			$(function (){
+				$('#data').DataTable({
 				responsive: true,
 				autoWidth: false
 			});
-		});
-
-		$('.btnTest').on('click', function() {
-			$.ajax({
-				url: "/arp/category/list/",
-				type: 'POST',
-				data: {id: 1},
-				dataType: 'json'
-			}).done(function(data){
-				console.log(data);
+			
+			$('.btnTest').on('click', function() {
+				$.ajax({
+					url: '{% url 'arp:category_list' %}',
+					type: 'POST',
+					data: {id: 1},
+					dataType: 'json'
+				}).done(function(data){
+					console.log(data);
+				});
 			});
 		});
 	</script>
